--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,10 +4,9 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = tt
+SPHINXPROJ    = t
 SOURCEDIR     = source
-BUILDDIR      = build
-
+BUILDDIR      = ..
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
